<resources>
    <string name="parametres">Paramètres</string>
    <string name="param_trez_les_option_de_connexion_et_de_chargement_des_donn_e">Paramétrez les option de connexion et de chargement des donnée</string>
    <string name="tous_vos_points_de_vente_ainsi_que_leurs_statistiques">Tous vos points de vente ainsi que leurs statistiques</string>
    <string name="cr_er_modidifer_et_supprimer_vos_partenaires">Créer modidifer et supprimer vos partenaires</string>
    <string name="cr_er_modifier_et_supprimer_vos_produits">Créer modifier et supprimer vos produits</string>
    <string name="commerciaux">Commerciaux</string>
    <string name="cr_er_modifier_et_supprimer_vos_commerciaux">Créer modifier et supprimer vos commerciaux</string>
    <string name="op_rations">Opérations</string>
    <string name="consulter_les_op_rations_fectu_es_sur_vos_points_de_vente">Consulter les opérations éfectuées sur vos points de vente</string>
    <string name="profil">Profil</string>
    <string name="modifier_votre_profil_d_utilisateur">Modifier votre profil d\'utilisateur</string>
    <string name="passwordactu">Mot de passe actuel :</string>
    <string name="newpass">Nouveau mot de passe :</string>
    <string name="confirm">Confirmation :</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="deconnecter_votre_compte_de_ce_t_l_phone">Déconnecter votre compte de ce téléphone ?</string>
    <string name="app_name">Abacus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="menu_vente">Vente</string>
    <string name="menu_achat">Approvisionnement</string>
    <string name="menu_commande_client">Commande client</string>
    <string name="menu_commande_fournisseur">Commande fournisseur</string>
    <string name="menu_journal">Journal des opérations</string>
    <string name="billetage">Billetage</string>
    <string name="licence">Licence</string>
    <string name="param">Paramètres</string>
    <string name="help">A propos</string>
    <string name="menu_produit">Produit</string>
    <string name="menu_fournisseur">Fournisseur</string>
    <string name="menu_client">Client</string>
    <string name="menu_payement">Crédit - Payement</string>
    <string name="sdabsent">SD Absente</string>
    <string name="picturesave">Image sauvegardée</string>
    <string name="menu_stat">Statistiques</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produit">Produit</string>
    <string name="prix_input">Prix</string>
    <string name="quantite_input">Qte</string>
    <string name="prix">Prix</string>
    <string name="qt">Qte</string>
    <string name="remise_input">Remise</string>
    <string name="netapayer">"A payer : "</string>
    <string name="mtnrecu">Mt recu</string>
    <string name="client">Client</string>
    <string name="produithabituel">Produits habituel</string>
    <string name="remiseincorrectte">Remise incorrect</string>
    <string name="save_confirm">Enregistrer l\'opération?</string>
    <string name="data_errors1">Erreur: Veuillez entrer des données valides</string>
    <string name="data_errors2">Erreur: Veuillez valider le produit en cours de modification ou l"annuler</string>
    <string name="data_errors3">Erreur: Echec d"ajout d'une ligne</string>
    <string name="data_errors4">Erreur: Remise superieur au prix Total !!!</string>
    <string name="data_errors7">Erreur: Montant recu incorrect !!!</string>
    <string name="data_errors5">Erreur: Aucun element selectionné</string>
    <string name="data_errors6">Erreur</string>
    <string name="echec_ajout">Echec</string>
    <string name="echec_del">Echec</string>
    <string name="operation_success">Opération ajoutée</string>
    <string name="vente_success">Vente ajoutée</string>
    <string name="btn_nvo">Nouveau</string>
    <string name="btn_billet">billet</string>
    <string name="azero">Remettre à zero</string>
    <string name="close">Fermer</string>
    <string name="exit_confirm">Quittez ?</string>
    <string name="itemSelected"> sélectionné</string>
    <string name="action_del">Supprimer</string>
    <string name="send_loding">Opération en cours</string>
    <string name="wait">Veuillez patienter</string>
    <string name="item_del">élément supprimé</string>
    <string name="menu_search">Recherche</string>
    <string name="ProduitListeActivity">Liste des produits</string>
    <string name="title_activity_produit">Produit</string>
    <string name="datechoice">Choisir la date</string>
    <string name="delconfirm">Supprimer?</string>
    <string name="tout">Tout</string>
    <string name="recurrent">Fréquent</string>
    <string name="nonSync">Non Sync</string>
    <string name="btn_valid">Valider</string>
    <string name="text_empty">liste vide</string>
    <string name="title_activity_produit_form">Produit-Formulaire</string>
    <string name="prixv">Prix de vente</string>
    <string name="produit_modif">Prix modifiable</string>
    <string name="prixa">Prix d\'achat</string>
    <string name="code">Code</string>
    <string name="libelle">Libelle</string>
    <string name="imprimer">Imprimer</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Supprimer</string>
    <string name="addfoto">Ajouter une image</string>
    <string name="echec">Echec</string>
    <string name="produit_success">Produit ajouté</string>
    <string name="unite">Unité</string>
    <string name="annuler">Annuler</string>
    <string name="modif">Modifier</string>
    <string name="action">Action</string>
    <string name="produit_suprimmer">Produit supprimer</string>
    <string name="menu_sync">Synchronisation</string>
    <string name="title_activity_caisse_setting">CaisseSetting</string>
    <string name="password">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="quiter">Quitter</string>
    <string name="login">Login</string>
    <string name="load_success">Chargement réusi</string>
    <string name="load_echec">Echec de chargement</string>
    <string name="aucuncaisse">Caisse introuvable</string>
    <string name="title_activity_parametre">Paramètres</string>
    <string name="changecmt">Changer de compte</string>
    <string name="reglege">Réglages</string>
    <string name="caisseno">"Caisse No : "</string>
    <string name="poroduinonmod">Produit non modifiable</string>
    <string name="prixpoin">"Prix: "</string>
    <string name="codepoint">"Code: "</string>
    <string name="title_activity_ventes">Ventes</string>
    <string name="title_activity_operation">Opérations</string>
    <string name="entree">Entrée</string>
    <string name="sortie">Sortie</string>
    <string name="nbr">Nbre</string>
    <string name="op">Opération</string>
    <string name="nb">Nbre</string>
    <string name="mtnn">Mte</string>
    <string name="fermer">Fermer</string>
    <string name="achat">Achat</string>
    <string name="divers">Divers</string>
    <string name="vente">Vente</string>
    <string name="date">Date</string>
    <string name="recap">Recapitulatif</string>
    <string name="imp">Imprimer</string>
    <string name="anyresult">liste vide</string>
    <string name="yes">Oui</string>
    <string name="imprimermsg">Voulez-vous imprimer?</string>
    <string name="pdf">PDF</string>
    <string name="xls">EXCEL</string>
    <string name="listeop">Liste des opérations</string>
    <string name="listeentre">Liste des entrées</string>
    <string name="listedesop">Liste de toute les opérations</string>
    <string name="listedesvente">Liste des ventes</string>
    <string name="adresse">" Adresse :"</string>
    <string name="tel">"Tel : "</string>
    <string name="opp">Op :</string>
    <string name="debit">Entrée :</string>
    <string name="credi">Sortie :</string>
    <string name="depense">Dépense</string>
    <string name="ficname">Nom du fichier</string>
    <string name="docpdf">Document PDF</string>
    <string name="anyop">Aucune opération</string>
    <string name="docexcel">Document EXCEL</string>
    <string name="menu_op">Opération</string>
    <string name="listedesachat">Liste des achats</string>
    <string name="listedesdp">Liste des dépenses</string>
    <string name="listedesvt">Liste des ventes</string>
    <string name="listeopp">nom</string>
    <string name="menu_listeop">Liste des opérations</string>
    <string name="title_activity_depense">Dépenses</string>
    <string name="title_activity_depense_form">Dépense-Formulaire</string>
    <string name="mte">Montant</string>
    <string name="description">Description</string>
    <string name="menu_depense">Dépense</string>
    <string name="depense_success">Dépense ajoutée</string>
    <string name="title_activity_commande">Commandes</string>
    <string name="cmd">Commande</string>
    <string name="title_activity_client">Clients</string>
    <string name="cnt">Contact :</string>
    <string name="adr">Adresse :</string>
    <string name="menu_partenaire">Partenaires</string>
    <string name="title_activity_partenaire_form">Partenaire-Formulaire</string>
    <string name="title_activity_commercial_form">Commercial-Formulaire</string>
    <string name="feminin">Feminin</string>
    <string name="masculin">Masculin</string>
    <string name="pm">Personne morale</string>
    <string name="raisonsocial">Raison sociale</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="contact">Contact</string>
    <string name="eamil">E-mail</string>
    <string name="partenaire_success">Partenaire ajouté</string>
    <string name="cmd_success">Commande ajoutée</string>
    <string name="save_cmd_confirm">Enregistrer la commande ?</string>
    <string name="cmdfr">Commande fournisseur</string>
    <string name="cmdclt">Commande client</string>
    <string name="adressee">Adresse</string>
    <string name="notransact">No Transaction :</string>
    <string name="netapaye">"Net Payer : "</string>
    <string name="remise">"Remise : "</string>
    <string name="recu">"Recu : "</string>
    <string name="rendu">"Rendu : "</string>
    <string name="dateoperation">"Date operation : "</string>
    <string name="title_activity_statistique">Statistique</string>
    <string name="pourcop">Pourcentage de chaque opération</string>
    <string name="generale">Générale</string>
    <string name="impconfig">Imprimante</string>
    <string name="impext">Imprimante : externe</string>
    <string name="impint">Imprimante : interne</string>
    <string name="imprsum">Nom du peripherique bluetooth en charge de l\'impression</string>
    <string name="verrouiller">Verrouiller</string>
    <string name="offverrouiller">Pas vérrouillé</string>
    <string name="onverrouiller">Vérrouillé</string>
    <string name="passwordsummary">Mot de passe de vérrouillage de l\'application</string>
    <string name="mail">E-mail</string>
    <string name="mailsummary">E-mail de recuperation du mot de passe</string>
    <string name="indicateur">Indicateur</string>
    <string name="indicsummary">Indicateur pour se rappeler du mot de passe en cas d\'oublie</string>
    <string name="security">Sécurité</string>
    <string name="tele">Téléphone</string>
    <string name="inscription">Inscription</string>
    <string name="ville">Ville</string>
    <string name="quartier">Quartier</string>
    <string name="pays">Pays</string>
    <string name="affecterproduit">Affecter des produits</string>
    <string name="contacter">Contacter</string>
    <string name="nbreload">Frequence des synchronisations</string>
    <string name="nbreloadsum">Frequence des synchronisations en minutes</string>
    <string name="stockageon">"Stockage : Carte SD"</string>
    <string name="stockageoff">"Stockage : Memoire interne"</string>
    <string name="stockage">Stockage</string>
</resources>