<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drLayout"
    tools:context=".MainActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal">



        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logos"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/logos" />

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/login"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/annuler"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="40"
                        android:layout_marginRight="25dp"
                        android:background="@color/my_primary"
                        android:textColor="@color/my_secondary_text"
                        android:text="@string/quiter"
                        />

                    <Button
                        android:id="@+id/valider"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="40"
                        android:layout_marginLeft="25dp"
                        android:background="@color/my_primary"
                        android:textColor="@color/my_secondary_text"
                        android:text="@string/valider"
                        />
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/inscription"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/my_selected"
                android:textColor="@color/my_secondary_text"
                android:text="@string/inscription"
                android:visibility="gone"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
